internal/testdata/basic/autogen-templates/ingress-1/nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: feature/skycms-10626-update-permissions-by-term
    lagoon.sh/version: v2.7.x
    monitor.stakater.com/enabled: "false"
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Robots-Tag "noindex, nofollow";
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/instance: nginx
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: autogenerated-ingress
    lagoon.sh/autogenerated: "true"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: feature-skycms-10626-update-permissions-b-b92f
    lagoon.sh/environmentType: production
    lagoon.sh/project: abc-skyforce
    lagoon.sh/service: nginx
    lagoon.sh/service-type: basic
    lagoon.sh/template: autogenerated-ingress-0.1.0
    route.lagoon.sh/source: autogenerated
  name: nginx
spec:
  rules:
  - host: nginx-abc-skyforce-feature-skycms-10626-update-permiss-pzsnrv3o.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              name: tcp-8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx-g47wgggi-7ntzklib.example.com
    - nginx-abc-skyforce-feature-skycms-10626-update-permiss-pzsnrv3o.example.com
    secretName: nginx-tls
status:
  loadBalancer: {}
